[gd_scene load_steps=11 format=3 uid="uid://bri3qsfonbejf"]

[ext_resource type="Script" path="res://src/morph_button.gd" id="1_lhacy"]
[ext_resource type="FontFile" uid="uid://dyyh8np4ys2qg" path="res://assets/fonts/pxlxxl/omelette_font/assets/ttf/om_icons_silhouette.ttf" id="2_d4g8o"]
[ext_resource type="Theme" uid="uid://fa2uag8fv3w1" path="res://assets/main_theme.tres" id="3_4q30i"]
[ext_resource type="AudioStream" uid="uid://bfnric3dvf3yq" path="res://assets/audio/place_block.wav" id="4_n3n35"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l3aue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7xeb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s7nee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gf2px"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_njerx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ich8"]

[node name="MorphButton" type="MarginContainer"]
custom_minimum_size = Vector2(128, 0)
offset_right = 84.0
offset_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_lhacy")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 14.0

[node name="Label" type="Label" parent="Control"]
offset_top = 2.0
offset_right = 8.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("2_d4g8o")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_l3aue")
text = "b"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Control"]
offset_left = 9.0
offset_right = 97.0
offset_bottom = 16.0
theme = ExtResource("3_4q30i")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxEmpty_p7xeb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_s7nee")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gf2px")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_njerx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ich8")
text = "PLACEHOLDER"
icon_alignment = 1

[node name="FocusSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n3n35")
volume_db = -10.0
pitch_scale = 0.75

[connection signal="button_down" from="Control/Button" to="." method="_on_button_button_down"]
[connection signal="focus_entered" from="Control/Button" to="." method="_on_button_focus_entered"]
[connection signal="focus_exited" from="Control/Button" to="." method="_on_button_focus_exited"]
